--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -14,6 +14,7 @@ header {
 
 header h1 {
   margin-left: 100px;
+  cursor: pointer;
 }
 
 header nav {
@@ -34,7 +35,7 @@ header li {
   position: relative;
   display: inline-block;
   list-style: none;
-  margin: 0 15px;
+  margin: 0 10px;
   font-size: 1em;
   line-height: 1.2em;
   font-weight: 700;
