--- a/src/Concerts/ConcertTile.css
+++ b/src/Concerts/ConcertTile.css
@@ -5,17 +5,64 @@
 }
 
 .concert-tile-inner {
-  background-color: pink;
-  padding: 10px;
+  background-color: rgb(250, 250, 250);
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
-  transition: all 0.5s;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.24);
 }
 
 .concert-tile-inner:hover {
   transform: scale(1.02);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.tile-image {
+  width: 60%;
+  height: 100%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-size: auto 100%;
+  background-position: center;
+}
+
+.tile-details {
+  padding: 15px;
+  width: 40%;
+  height: 100%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.tile-event-details {
+  width: 100%;
+  height: 50%;
+  border-bottom: 1px solid black;
+}
+
+.tile-event-details h1 {
+  margin: 0 0 10px 0;
+  padding: 0;
+  font-size: 110%;
+}
+
+.tile-event-details p {
+  margin: 0 0 7px 0;
+  padding: 0;
+  font-size: 90%;
+  color: rgb(63, 63, 63);
+}
+
+.tile-plan-details {
+  height: 50%;
+  width: 100%;
 }
 
 @media only screen and (max-width: 950px) {
