concert tile button and details

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -9,7 +9,7 @@ header {
   background-color: rgb(19, 19, 19);
   color: white;
   z-index: 9000;
-  box-shadow: 0 8px 6px -6px #999;
+  box-shadow: 0 8px 6px -6px rgb(46, 46, 46);
 }
 
 header h1 {
