--- a/src/Concerts/ConcertTile.css
+++ b/src/Concerts/ConcertTile.css
@@ -5,7 +5,7 @@
 }
 
 .concert-tile-inner {
-  background-color: rgb(250, 250, 250);
+  background-color: white;
   position: relative;
   display: flex;
   flex-flow: row nowrap;
@@ -14,7 +14,7 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  cursor: pointer;
+  cursor: default;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.24);
 }
@@ -34,7 +34,7 @@
 }
 
 .tile-details {
-  padding: 15px;
+  padding: 10px 15px;
   width: 40%;
   height: 100%;
   border-top-right-radius: 10px;
@@ -43,8 +43,8 @@
 
 .tile-event-details {
   width: 100%;
-  height: 50%;
-  border-bottom: 1px solid black;
+  height: 65%;
+  min-height: 50%;
 }
 
 .tile-event-details h1 {
@@ -61,8 +61,12 @@
 }
 
 .tile-plan-details {
-  height: 50%;
+  height: 35%;
   width: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 @media only screen and (max-width: 950px) {
