--- a/src/Concerts/Concerts.css
+++ b/src/Concerts/Concerts.css
@@ -1,7 +1,6 @@
 section.concerts {
-    position: relative;
-    width: 100%;
-    max-width: 1000px;  
-    margin: auto;
-    padding: 25px; 
+  position: relative;
+  width: 100%;
+  margin: auto;
+  background-color: rgb(250, 250, 250);
 }
