--- a/src/Buttons/Buttons.css
+++ b/src/Buttons/Buttons.css
@@ -3,23 +3,29 @@
   display: flex;
   justify-content: end;
   align-items: center;
+  height: 100%;
 }
 
 .start-plan-button button {
   box-sizing: border-box;
-  background-color: rgb(207, 12, 126);
+  background-color: rgb(10, 153, 224);
   border: none;
   color: white;
-  padding: 5px 5px;
+  padding: 20px 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 0.8em;
-  margin: 5px auto;
+  font-size: 1.1em;
+  /* margin: 5px auto; */
   cursor: pointer;
-  transition: all 0.7s;
-  border-radius: 5px;
+  transition: all 0.4s;
+  border-bottom-right-radius: 10px;
   outline: none;
-  font-weight: 600;
+  font-weight: 700;
   width: 100%;
+  height: 100%;
+}
+
+.start-plan-button button:hover {
+  font-size: 1.4em;
 }
