--- a/src/Concerts/ConcertTile.css
+++ b/src/Concerts/ConcertTile.css
@@ -34,7 +34,8 @@
 }
 
 .tile-details {
-  padding: 10px 15px;
+  padding: 0;
+  margin: 0;
   width: 40%;
   height: 100%;
   border-top-right-radius: 10px;
@@ -43,8 +44,9 @@
 
 .tile-event-details {
   width: 100%;
-  height: 65%;
+  height: 70%;
   min-height: 50%;
+  padding: 10px;
 }
 
 .tile-event-details h1 {
@@ -61,7 +63,7 @@
 }
 
 .tile-plan-details {
-  height: 35%;
+  height: 30%;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
