--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -2,14 +2,14 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 50px;
+  height: 75px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(19, 19, 19);
-  color: white;
+  background-color: white;
+  color: rgb(19, 19, 19);
+  border-bottom: solid 1px rgb(232, 232, 233);
   z-index: 9000;
-  box-shadow: 0 8px 6px -6px rgb(46, 46, 46);
 }
 
 header h1 {
@@ -43,12 +43,12 @@ header li {
 }
 
 header li:hover {
-  border-bottom: 2px solid white;
+  color: rgb(10, 153, 224);
 }
 
 header li.navActive,
 header li.navActive:hover {
-  border-bottom: 2px solid rgb(207, 12, 126);
+  border-bottom: 2px solid rgb(10, 153, 224);
 }
 
 .hamburger {
