--- a/src/Home/InstructionsModal.css
+++ b/src/Home/InstructionsModal.css
@@ -14,12 +14,12 @@
 .instructions-content {
   position: relative;
   background-color: white;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 10% auto; /* 15% from the top and centered */
   padding: 25px 40px;
   width: 90%; /* Could be more or less, depending on screen size */
   max-width: 500px;
   border-radius: 8px;
-  border-top: 5px solid rgb(207, 12, 126);
+  border-top: 5px solid rgb(10, 153, 224);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   animation-name: animatetop;
   animation-duration: 0.7s;
@@ -47,7 +47,7 @@
 }
 
 .instr-button button {
-  background-color: rgb(207, 12, 126);
+  background-color: rgb(10, 153, 224);
   border: none;
   color: white;
   padding: 10px 32px;
@@ -100,5 +100,11 @@
   to {
     top: 0;
     opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .instructions-content {
+    margin: 20% auto;
   }
 }
