--- a/src/Buttons/Buttons.css
+++ b/src/Buttons/Buttons.css
@@ -6,26 +6,53 @@
   height: 100%;
 }
 
-.start-plan-button button {
+.plan-button button {
   box-sizing: border-box;
   background-color: rgb(10, 153, 224);
   border: none;
   color: white;
-  padding: 20px 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.1em;
-  /* margin: 5px auto; */
   cursor: pointer;
+}
+
+.start-plan-button button {
+  padding: 20px 5px;
+  width: 100%;
+  height: 100%;
   transition: all 0.4s;
   border-bottom-right-radius: 10px;
   outline: none;
   font-weight: 700;
-  width: 100%;
-  height: 100%;
 }
 
 .start-plan-button button:hover {
   font-size: 1.4em;
+}
+
+.login-button {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin: 30px auto 0;
+}
+
+.login-button button {
+  box-sizing: border-box;
+  background-color: rgb(10, 153, 224);
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.2em;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 10px 40px;
+  width: 50%;
 }
