--- a/src/Plans/PlanViewPanel.css
+++ b/src/Plans/PlanViewPanel.css
@@ -4,7 +4,7 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  max-width: 700px;
+  max-width: 650px;
   padding: 25px;
   margin: auto;
 }
@@ -12,13 +12,61 @@
 .plan-view-panel-inner {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 250px;
   background-color: white;
-  padding: 25px;
+  padding: 0;
+  margin: 0;
   border-radius: 10px;
   cursor: default;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.24);
   display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
 
+.view-panel-left {
+  background-color: pink;
+  width: 40%;
+  height: 100%;
+  border-right: 1px solid silver;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.view-panel-right {
+  width: 60%;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.panel-right-top {
+  width: 100%;
+  height: 65%;
+  border-bottom: 1px solid silver;
+}
+
+.panel-right-bottom {
+  width: 100%;
+  height: 35%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.right-bottom-left {
+  width: 60%;
+  height: 100%;
+  border-right: 1px solid silver;
+}
+
+.right-bottom-right {
+  width: 40%;
+  height: 100%;
 }
