--- a/src/Plans/PlanViewPanel.css
+++ b/src/Plans/PlanViewPanel.css
@@ -70,3 +70,18 @@
   width: 40%;
   height: 100%;
 }
+
+.plan-view-comments-drawer {
+  position: absolute;
+  width: 340px;
+  height: 250px;
+  background-color: white;
+  z-index: 9998;
+  top: 0;
+  left: 0;
+  margin-top: 50px;
+  margin-left: 42%;
+  border-radius: 5px;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.24);
+}
