--- a/src/Home/InstructionsModal.css
+++ b/src/Home/InstructionsModal.css
@@ -1,5 +1,5 @@
 .instructions-modal {
-  display: block; /* Hidden by default */
+  display: block; 
   position: fixed; /* Stay in place */
   z-index: 9995; /* Sit on top */
   left: 0;
