--- a/src/Plans/PlanViewPanel.css
+++ b/src/Plans/PlanViewPanel.css
@@ -28,12 +28,12 @@
 }
 
 .view-panel-left {
-  background-color: pink;
   width: 40%;
   height: 100%;
-  border-right: 1px solid silver;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  background-size: auto 100%;
+  background-position: center;
 }
 
 .view-panel-right {
@@ -49,6 +49,31 @@
   width: 100%;
   height: 65%;
   border-bottom: 1px solid silver;
+  padding: 15px 20px;
+  text-transform: uppercase;
+}
+
+.panel-right-top h1 {
+  padding: 0;
+  margin: 0;
+  font-size: 1.3em;
+  color: rgb(19, 19, 19);
+}
+
+.panel-right-top h4 {
+  padding: 0;
+  margin: 3px 0 0 0;
+  font-size: 0.9em;
+  font-weight: 600;
+  color: rgb(19, 19, 19);
+}
+
+.panel-right-top p {
+  padding: 0;
+  margin: 3px 0 0 0;
+  font-size: 0.8em;
+  font-weight: 700em;
+  color: rgb(48, 48, 48);
 }
 
 .panel-right-bottom {
@@ -69,19 +94,4 @@
 .right-bottom-right {
   width: 40%;
   height: 100%;
-}
-
-.plan-view-comments-drawer {
-  position: absolute;
-  width: 340px;
-  height: 250px;
-  background-color: white;
-  z-index: 9998;
-  top: 0;
-  left: 0;
-  margin-top: 50px;
-  margin-left: 42%;
-  border-radius: 5px;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.24);
 }
