--- a/src/Buttons/Buttons.css
+++ b/src/Buttons/Buttons.css
@@ -18,12 +18,14 @@
 }
 
 .start-plan-button button {
-  background-color: rgba(10, 153, 224, 0.644);
+  background-color: white;
+  color: rgb(10, 153, 224);
   padding: 20px 5px;
   width: 100%;
   height: 100%;
   align-self: flex-end;
   transition: all 0.4s;
+  border-top: 1px solid silver;
   border-bottom-right-radius: 10px;
   outline: none;
   font-weight: 700;
@@ -63,11 +65,10 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-weight: 600;
   cursor: pointer;
-  padding: 10px 40px;
-  width: 100%;
+  padding: 10px 30px;
   outline: none;
 }
 
