--- a/src/Buttons/Buttons.css
+++ b/src/Buttons/Buttons.css
@@ -87,3 +87,20 @@
 .view-plan-button button:hover {
   font-size: 1.4em;
 }
+
+.submit-comment-button button {
+  background-color: rgb(10, 153, 224);
+  /* padding: 20px 5px; */
+  width: 100%;
+  height: 100%;
+  align-self: flex-end;
+  transition: all 0.4s;
+  /* border-bottom-right-radius: 10px; */
+  outline: none;
+  font-weight: 700;
+  font-size: 0.7em;
+}
+
+.submit-comment-button button:hover {
+  font-size: 0.8em;
+}
