--- a/src/Comments/CommentsDrawer.css
+++ b/src/Comments/CommentsDrawer.css
@@ -95,4 +95,18 @@
   height: 30%;
   width: 100%;
   background-color: gray;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.drawer-button-container {
+  width: 20%;
+  height: 100%;
+}
+
+.comments-count {
+  width: 80%;
+  height: 100%;
 }
