--- a/src/Comments/CommentsDrawer.css
+++ b/src/Comments/CommentsDrawer.css
@@ -50,13 +50,13 @@
 .drawer-buffer-top {
   height: 5%;
   width: 100%;
-  background-color: red;
+  /* background-color: red; */
 }
 
 .comment-list {
   height: 70%;
   width: 100%;
-  background-color: green;
+  /* background-color: green; */
   overflow-y: scroll;
 }
 
@@ -94,7 +94,6 @@
 .drawer-handle {
   height: 30%;
   width: 100%;
-  background-color: gray;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -109,4 +108,24 @@
 .comments-count {
   width: 80%;
   height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.comments-count h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 0.6em;
+  font-weight: 500;
+  padding-left: 10px;
+}
+
+.comments-count p {
+  margin: 0;
+  padding: 0;
+  font-size: 0.6em;
+  font-weight: 500;
+  padding-left: 5px;
 }
