--- a/src/Buttons/Buttons.css
+++ b/src/Buttons/Buttons.css
@@ -122,3 +122,36 @@
 .comment-drawer-button button:hover {
   font-size: 0.8em;
 }
+
+.comment-drawer-button button:hover {
+  font-size: 0.8em;
+}
+
+.venue-select-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 50px;
+  /* background-color: blue; */
+  margin: 5px;
+}
+
+.venue-select-button button {
+  padding: 0;
+  background-color: rgb(10, 153, 224);
+  outline: none;
+  font-weight: 700;
+  font-size: 0.7em;
+  color: white;
+  width: 100%;
+  height: 100%;
+  border: none;
+  cursor: pointer;
+}
+
+.venue-select-button.venue-inactive button {
+  background-color: white;
+  border: 1px solid silver;
+  color: rgb(26, 26, 26);
+}
