--- a/src/Concerts/ConcertTile.css
+++ b/src/Concerts/ConcertTile.css
@@ -46,13 +46,19 @@
   width: 100%;
   height: 70%;
   min-height: 50%;
-  padding: 10px;
+  padding: 15px;
 }
 
 .tile-event-details h1 {
   margin: 0 0 10px 0;
   padding: 0;
   font-size: 110%;
+}
+
+.tile-event-details h2 {
+  margin: 0 0 10px 0;
+  padding: 0;
+  font-size: 95%;
 }
 
 .tile-event-details p {
