--- a/src/Plans/Plans.css
+++ b/src/Plans/Plans.css
@@ -4,7 +4,7 @@ section.plans {
   margin: auto;
 }
 
-section.plans.please-log-in h1 {
+.please-log-in {
   text-align: center;
   max-width: 900px;
   margin: 100px auto;
