--- a/src/Comments/CommentsDrawer.css
+++ b/src/Comments/CommentsDrawer.css
@@ -129,3 +129,21 @@
   font-weight: 500;
   padding-left: 5px;
 }
+
+@media only screen and (max-width: 650px) {
+  .comments-drawer {
+    width: 240px;
+  }
+}
+
+@media only screen and (max-width: 485px) {
+  .comments-drawer {
+    width: 180px;
+  }
+}
+
+@media only screen and (max-width: 374px) {
+  .comments-drawer {
+    width: 125px;
+  }
+}
