--- a/src/Concerts/ConcertTile.css
+++ b/src/Concerts/ConcertTile.css
@@ -83,3 +83,24 @@
     max-width: 600px;
   }
 }
+
+@media only screen and (max-width: 750px) {
+  .tile-event-details h1 {
+    margin: 0 0 5px 0;
+    padding: 0;
+    font-size: 80%;
+  }
+
+  .tile-event-details h2 {
+    margin: 0 0 5px 0;
+    padding: 0;
+    font-size: 70%;
+  }
+
+  .tile-event-details p {
+    margin: 0 0 3px 0;
+    padding: 0;
+    font-size: 65%;
+    color: rgb(63, 63, 63);
+  }
+}
