--- a/src/Header/HamburgerMenu.css
+++ b/src/Header/HamburgerMenu.css
@@ -28,15 +28,18 @@
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: start;
-  border: 1px solid black;
 }
 
 .hamburger-menu li {
   width: 100%;
   font-size: 3.5em;
-  border: 1px solid black;
+  border-bottom: 2px solid black;
   padding: 0;
   margin: 0;
+}
+
+.hamburger-menu li:last-child {
+  border-bottom: none;
 }
 
 .hamburger-menu li p {
