--- a/src/Header/HamburgerMenu.css
+++ b/src/Header/HamburgerMenu.css
@@ -33,7 +33,7 @@
 .hamburger-menu li {
   width: 100%;
   font-size: 2.5em;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid rgb(10, 153, 224);
   padding: 0;
   margin: 0;
 }
