--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -81,3 +81,10 @@ header li.navActive:hover {
     margin-left: 30px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  header h1 {
+    margin-left: 20px;
+
+  }
+}
