--- a/src/Home/UserPanel.css
+++ b/src/Home/UserPanel.css
@@ -56,6 +56,7 @@ section.user-panel {
   background-color: white;
   border-radius: 5px;
   border: 1px solid rgb(232, 232, 233);
+  border-top: 3px solid rgb(10, 153, 224);
 }
 
 .login-container {
