--- a/src/Plans/PlanCard.css
+++ b/src/Plans/PlanCard.css
@@ -212,4 +212,24 @@
     font-size: 40%;
     color: rgb(10, 153, 224);
   }
+
+  .plan-detail-center {
+    display: none;
+  }
+
+  .plan-detail-left {
+    width: 50%;
+  }
+
+  .plan-detail-right {
+    width: 50%;
+  }
+
+  .view-plan-button {
+    font-size: 0.8em;
+  }
+
+  .view-plan-button button {
+    padding: 10px 2px;
+  }
 }
