--- a/src/Plans/PlanViewPanel.css
+++ b/src/Plans/PlanViewPanel.css
@@ -102,6 +102,7 @@
 }
 
 .right-bottom-left {
+  padding: 3px;
   width: 60%;
   height: 100%;
   border-right: 1px solid silver;
@@ -118,6 +119,7 @@
 }
 
 .right-bottom-left-header h1 {
+  text-align: center;
   height: 30%;
   margin: 0;
   padding: 0;
@@ -147,4 +149,25 @@
 .right-bottom-right {
   width: 40%;
   height: 100%;
+}
+
+@media only screen and (max-width: 400px) {
+  .right-top-left h1 {
+    font-size: 1em;
+  }
+
+  .right-top-right {
+    padding: 5px;
+    margin: 0;
+  }
+
+  .right-top-right h4 {
+    font-size: 0.7em;
+    padding: 0;
+    margin: 0;
+  }
+
+  .right-bottom-left-header h1 {
+    font-size: 0.5em;
+  }
 }
